# fish-game

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  FishGame.tiled-session  GameLogic.md  README.md  animals.json  conanfile.py  conanfile.txt  conanfile_deprecated.txt  init.sh  map01.tmx  out.cereal  run.sh  socket_tester.py
assets/: RedFish.xcf
assets/body_parts_and_spriter_file/: cartoon_fish_05.scml
include/: tileson.hpp
include/cereal/details/: helpers.hpp
include/fish_game/: AssetManager.hpp  Auxiliary.hpp  ClientGame.hpp  Collision.hpp  Components.hpp  Config.hpp.in  ECS.hpp  FontManager.hpp  Game.hpp  GameInputEvents.hpp  Map.hpp  MockServer.hpp  MusicPlayer.hpp  NetworkClient.hpp  NetworkHost.hpp  Object.hpp  Player.hpp  ServerGame.hpp  SocketManager.hpp  TextureManager.hpp  TileComponent.hpp  Vector2D.hpp
include/fish_game/ECS/: ClientComponent.hpp  ColliderComponent.hpp  Components.hpp  ComponentsGenerator.hpp  ECS.hpp  Equipment.hpp  EquipmentComponent.hpp  EventHandlerComponent.hpp  GravityComponent.hpp  HealthComponent.hpp  KeyboardController.hpp  MoveComponent.hpp  ProjectileComponent.hpp  ServerComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp  WearableComponent.hpp
include/fish_game/testcereal/: main.cpp  myclasses.cpp  myclasses.hpp  polymorphism_test.xml
maps/: RiverTileset.tsj  RiverTilesetDesaturated.tsj  TestP.tmj  WaterFallTileBottom.tsj  WaterFallTileMiddle.tsj  WaterFallTileTop.tsj  WaterTile.tsj  hostLobby.tmj  joinLobby.tmj  loadingBar.tmj  lobby.tmj  mainMenu.tmj  map01.json  map01.tmx  map02.tmj  map03.tmj  map04.tmj
maps/backgrounds/: background08.tsj  lobby.tmj
src/: AssetManager.cpp  Auxiliary.cpp  ClientGame.cpp  Collision.cpp  ECS.cpp  Entity.cpp  FontManager.cpp  Game.cpp  GameInputEvents.cpp  JoinGame.cpp  Map.cpp  MusicPlayer.cpp  NetworkClient.cpp  NetworkHost.cpp  Object.cpp  Player.cpp  ServerGame.cpp  SocketManager.cpp  TextureManager.cpp  Vector2D.cpp  main.cpp  serial_example.cpp
src/ECS/: ClientComponent.cpp  ColliderComponent.cpp  ComponentsGenerator.cpp  EquipmentComponent.cpp  EventHandlerComponent.cpp  GravityComponent.cpp  HealthComponent.cpp  KeyboardController.cpp  MoveComponent.cpp  ProjectileComponent.cpp  ServerComponent.cpp  SpriteComponent.cpp  TransformComponent.cpp  WearableComponent.cpp
tileset/: River Tileset.tsx  WaterFall Tile Middle.tsx  plattformer.tsx  waterfall.tsx
